Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-3564

C++/Qt: potential core dump in TQTcpServer in case an exception occurs in TAsyncProcessor::process()

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 0.9.3, 0.10.0
    • 0.10.0
    • C++ - Library

    Description

      It's undefined behaviour, if a Qt object (sender) get's deleted while executing on of it's slots. This can happen in case an exception occurs in TQTcpServer::beginDecode() as the call to ctxMap_.erase() will delete the sender of the Qt signal.

      Attachments

        Activity

          People

            sebastian.zenker Sebastian Zenker
            sebastian.zenker Sebastian Zenker
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: