THRIFT-3564: potential core dump in TQTcpServer Client: C++ Patch: Sebastian Zenker